fixed overflow of long words in reviews

--- a/react-app/src/components/SingleProduct/singleproduct.css
+++ b/react-app/src/components/SingleProduct/singleproduct.css
@@ -92,12 +92,13 @@
     background-color: rgba(186, 172, 174, 0.3);
     border-radius: 15px;
     padding: 15px;
-
     font-weight: 300;
 }
 
 #review-text {
     line-height: 1.3em;
+    inline-size: 400px;
+    overflow-wrap: break-word;
 }
 
 #review-user {
